localization/v2.5.x/site/zh-hant/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: 本頁提供您與 Milvus 互動的教學清單。
title: 教學總覽
---

<h1 id="Tutorials-Overview" class="common-anchor-header">教學總覽<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>本頁提供一系列教學，讓您與 Milvus 互動。</p>
<table>
<thead>
<tr><th>教學</th><th>使用案例</th><th>相關 Milvus 功能</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/zh-hant/v2.5.x/build-rag-with-milvus.md">使用 Milvus 建立 RAG</a></td><td>RAG</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/how_to_enhance_your_rag.md">進階 RAG</a></td><td>RAG</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/full_text_search_with_milvus.md">使用 Milvus 進行全文檢索</a></td><td>快速入門</td><td>全文檢索</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/hybrid_search_with_milvus.md">使用 Milvus 的混合搜尋</a></td><td>混合搜尋</td><td>混合搜尋、多向量、密集嵌入、稀疏嵌入</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/image_similarity_search.md">使用 Milvus 的圖像搜尋</a></td><td>語意搜尋</td><td>向量搜尋、動態領域</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/multimodal_rag_with_milvus.md">使用 Milvus 的多模態 RAG</a></td><td>RAG</td><td>向量搜尋、動態領域</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/multimodal_rag_with_milvus.md">使用多向量的多模式搜尋</a></td><td>語意搜尋</td><td>多向量、混合搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/graph_rag_with_milvus.md">使用 Milvus 的圖形 RAG</a></td><td>RAG</td><td>圖形搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/contextual_retrieval_with_milvus.md">使用 Milvus 進行上下文檢索</a></td><td>快速啟動</td><td>向量檢索</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/hdbscan_clustering_with_milvus.md">使用 Milvus 進行 HDBSCAN 聚類</a></td><td>快速啟動</td><td>向量檢索</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/use_ColPali_with_milvus.md">使用 ColPali 與 Milvus 進行多模式檢索</a></td><td>快速啟動</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/quickstart_with_attu.md">使用Attu快速入門</a></td><td>快速啟動</td><td>向量檢索</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/use-async-milvus-client-with-asyncio.md">使用 AsyncMilvusClient 與 asyncio</a></td><td>AsyncIO</td><td>AsyncIO、向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/text_image_search.md">使用 Milvus 進行文字到圖片搜尋</a></td><td>語意搜尋</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/vector_visualization.md">向量可視化</a></td><td>快速入門</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/movie_recommendation_with_milvus.md">使用 Milvus 的電影推薦</a></td><td>推薦系統</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/funnel_search_with_matryoshka.md">使用 Matryoshka 嵌入式進行漏斗搜尋</a></td><td>快速啟動</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/question_answering_system.md">問題回答系統</a></td><td>問題回答</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/recommendation_system.md">推薦系統</a></td><td>推薦系統</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/video_similarity_search.md">視訊相似性搜尋</a></td><td>語意搜尋</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/audio_similarity_search.md">音訊類似性搜尋</a></td><td>語意搜尋</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/dna_sequence_classification.md">DNA 分類</a></td><td>分類</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/text_search_engine.md">文字搜尋引擎</a></td><td>語意搜尋</td><td>向量搜尋</td></tr>
<tr><td><a href="/docs/zh-hant/v2.5.x/image_deduplication_system.md">影像重複刪除</a></td><td>重複資料刪除</td><td>向量搜尋</td></tr>
</tbody>
</table>
